# Q4_todo_app

./: .gitignore  BACKEND_PHASE7_BUGFIX_PROMPT.md  CLAUDE.md  FRONTEND_BACKEND_ALIGNMENT_REPORT.md  HACKATHON_VERIFICATION_REPORT.md  PHASE-2-IMPLEMENTATION-PROMPT.md  PHASE-5-SKILLS-COMPLETE.md  PHASE-7-IMPLEMENTATION-PROMPT.md  PHASE3_IMPLEMENT_PROMPT.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE8_COMPLETION_SUMMARY.md  PHASE_9_COMPLETION_SUMMARY.md  README.md  mycontext.txt  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
.specify/memory/: constitution.md
backend/: CLAUDE.md  Dockerfile  main.py  pyproject.toml
backend/routes/: auth.py
backend/schemas/: requests.py  responses.py
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: test_auth.py
cli_todo_app/: .gitignore
cli_todo_app/src/: __main__.py
cli_todo_app/tests/: conftest.py
docs/: ai-devops-tools.md
frontend/components/: TaskForm.tsx  TaskItem.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
history/adr/: 0001-infrastructure-abstraction-with-dapr.md  0002-event-driven-architecture-with-kafka.md  0003-reminder-scheduling-strategy.md  0004-cloud-deployment-platform-oke.md  0005-monitoring-observability-stack.md
k8s/todo-app/: .helmignore  Chart.yaml  values-example.yaml  values.yaml
phase-1/: pyproject.toml
phase-1/cli_todo_app/: pyproject.toml  test_demo.py  test_mcp.py
phase-1/cli_todo_app/src/cli/: commands.py
phase-1/cli_todo_app/src/models/: task.py
phase-1/cli_todo_app/src/services/: task_store.py
phase-1/cli_todo_app/src/utils/: __init__.py
phase-1/cli_todo_app/tests/unit/: test_input_sanitizer.py  test_task.py  test_task_store.py
phase-2/: FINAL_REQUIREMENTS_CHECKLIST.md  docker-compose.yml  pnpm-lock.yaml  vitest.setup.ts
phase-2/backend/: .env.example  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  SECURITY_CHECKLIST.md  config.py  coverage.xml  db.py  main.py  models.py  pyproject.toml
phase-2/backend/alembic/: env.py
phase-2/backend/middleware/: jwt.py  rate_limiting.py  security_headers.py
phase-2/backend/routes/: auth.py  tasks.py
phase-2/backend/schemas/: query_params.py  requests.py  responses.py
phase-2/backend/services/: __init__.py  auth_service.py  export_import_service.py  task_service.py
phase-2/backend/tests/: TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  test_auth.py  test_main.py
phase-2/backend/tests/api/: __init__.py  test_auth_api.py  test_tasks_api.py
phase-2/backend/tests/integration/: test_advanced_features.py  test_auth.py  test_query_params.py  test_tasks.py
phase-2/backend/tests/performance/: __init__.py  test_load_performance.py  test_query_performance.py
phase-2/backend/tests/security/: test_input_sanitization.py  test_performance.py  test_rate_limiting.py  test_security_headers.py  test_user_isolation.py
phase-2/backend/tests/unit/: __init__.py  test_auth_service.py  test_export_import_service.py  test_task_service.py
phase-2/backend/utils/: __init__.py  auth.py  caching.py  password.py
phase-2/frontend/: CHANGES.md  DEPLOYMENT.md  README.md  SECURITY.md  eslint.config.mjs  jest.config.js  jest.d.ts  jest.setup.js  lighthouserc.json  next.config.ts  package.json  pnpm-lock.yaml
phase-2/specs/: architecture.md  overview.md
phase-3/: README.md  docker-compose.yml  vite.config.ts
phase-3/backend/: .env.example  CLAUDE.md  MCP_FIXES_AND_BEST_PRACTICES.md  MCP_OPTIMIZATION_COMPLETE.md  MCP_TIMEOUT_FIX_CORRECT.md  OPENROUTER_INTEGRATION.md  chat_sessions.db-shm  chat_sessions.db-wal  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
phase-5/: CLAUDE.md  PHASE5_COMPLETION_STATUS.md  README.md  package.json
scripts/: deploy.ps1  deploy.sh
(+652 files in other folders)
