[project]
name = "todo_console"
version = "0.1.0"
description = "A basic CLI todo application"
requires-python = ">=3.13"
dependencies = [
    "click",
    "pytest",
]

[project.scripts]
todo = "cli_todo_app.src.__main__:cli"

[tool.uv]

[tool.pytest.ini_options]
pythonpath = ["cli_todo_app"]

[tool.setuptools]
packages = ["cli_todo_app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
